📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -6846,5 +6846,165 @@
         "published": "Wed, 10 Dec 2025 17:23:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46220540\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/spotify-tests-more-personalized-ai-powered-prompted-playlists/",
+        "title": "Spotify tests more personalized, AI-powered \u2018Prompted Playlists\u2019",
+        "link": "https://techcrunch.com/2025/12/10/spotify-tests-more-personalized-ai-powered-prompted-playlists/",
+        "published": "Wed, 10 Dec 2025 20:01:47 +0000",
+        "source": "TechCrunch",
+        "summary": "The playlists can factor in world knowledge, go back to your listening history from day one, and can be refreshed daily or weekly."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/overview-energy-wants-to-beam-energy-from-space-to-existing-solar-farms/",
+        "title": "Overview Energy wants to beam energy from space to existing solar farms",
+        "link": "https://techcrunch.com/2025/12/10/overview-energy-wants-to-beam-energy-from-space-to-existing-solar-farms/",
+        "published": "Wed, 10 Dec 2025 19:42:41 +0000",
+        "source": "TechCrunch",
+        "summary": "The stealthy startup plans to use a network of satellites to harvest sunlight and send it to Earth using infrared lasers."
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/841252/ifixit-fixbot-hands-on-ai-chatbot",
+        "title": "I couldn&#8217;t fix it with iFixit\u2019s AI FixBot",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/841252/ifixit-fixbot-hands-on-ai-chatbot",
+        "published": "2025-12-10T14:44:24-05:00",
+        "source": "The Verge",
+        "summary": "My classic Sony CRT television won't power on. My living room is chilly because my Mitsubishi heat pump isn't putting out enough hot air. I want my Japanese N64 to play US games, too, but I've been too busy to pop the hood. What if I had an AI companion to talk me through? iFixit [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841879/reddit-verification-test",
+        "title": "Reddit is testing verification",
+        "link": "https://www.theverge.com/news/841879/reddit-verification-test",
+        "published": "2025-12-10T14:33:26-05:00",
+        "source": "The Verge",
+        "summary": "Reddit is starting to test verified profiles, the company announced today. Users who are verified as part of this \"limited alpha test\" will have a gray checkmark next to their username \"across profiles, communities, feeds, post detail pages, and search results.\" For this \"initial test,\" Reddit says it's \"selected a group of public figures and [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/many-states-say-theyll-defy-rfk-jrs-changes-to-hepatitis-b-vaccination/",
+        "title": "Many States Say They\u2019ll Defy RFK Jr.\u2019s Changes to Hepatitis B Vaccination",
+        "link": "https://www.wired.com/story/many-states-say-theyll-defy-rfk-jrs-changes-to-hepatitis-b-vaccination/",
+        "published": "Wed, 10 Dec 2025 19:12:28 +0000",
+        "source": "WIRED",
+        "summary": "Most Democratic-led states will continue to recommend the hepatitis B vaccine at birth, despite a CDC advisory panel\u2019s vote against it."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/kindle-scribe-colorsoft-brings-color-e-ink-to-amazons-11-inch-e-reader/",
+        "title": "Kindle Scribe Colorsoft brings color e-ink to Amazon\u2019s 11-inch e-reader",
+        "link": "https://arstechnica.com/gadgets/2025/12/kindle-scribe-colorsoft-brings-color-e-ink-to-amazons-11-inch-e-reader/",
+        "published": "Wed, 10 Dec 2025 18:40:58 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Amazon has added color e-ink to its devices more slowly than its competitors."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/us-taking-25-cut-of-nvidia-chip-sales-makes-no-sense-experts-say/",
+        "title": "US taking 25% cut of Nvidia chip sales \u201cmakes no sense,\u201d experts say",
+        "link": "https://arstechnica.com/tech-policy/2025/12/us-taking-25-cut-of-nvidia-chip-sales-makes-no-sense-experts-say/",
+        "published": "Wed, 10 Dec 2025 18:30:45 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Trump\u2019s odd Nvidia reversal may open the door for China to demand Blackwell access."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/after-key-russian-launch-site-is-damaged-nasa-accelerates-dragon-supply-missions/",
+        "title": "After key Russian launch site is damaged, NASA accelerates Dragon supply missions",
+        "link": "https://arstechnica.com/space/2025/12/after-key-russian-launch-site-is-damaged-nasa-accelerates-dragon-supply-missions/",
+        "published": "Wed, 10 Dec 2025 18:13:52 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "It is by no means certain that Russia will be able to fix Site 31 soon."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/intel-loses-its-latest-challenge-to-16-year-old-eu-antitrust-case-200746004.html?src=rss",
+        "title": "Intel loses its latest challenge to 16-year-old EU antitrust case",
+        "link": "https://www.engadget.com/big-tech/intel-loses-its-latest-challenge-to-16-year-old-eu-antitrust-case-200746004.html?src=rss",
+        "published": "Wed, 10 Dec 2025 20:07:46 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Intel will have to pay up in <a class=\"link\" href=\"https://www.engadget.com/2009-05-13-intel-fined-1-45-billion-dollars.html\" target=\"_blank\">an antitrust case dating back to 2009</a>, <em>Reuters</em> <a class=\"link\" href=\"https://www.reuters.com/sustainability/boards-policy-regulation/eu-court-cuts-intels-eu-antitrust-fine-2025-12-10/\" target=\"_blank\">reported</a> on Wednesday. The company has lost its challenge against a \u20ac376 million ($438.7 million) regulatory fine levied by the European "
+    },
+    {
+        "id": "https://www.engadget.com/the-10-best-white-elephant-gifts-worth-fighting-over-for-2025-150516281.html?src=rss",
+        "title": "The 10 best white elephant gifts worth fighting over for 2025",
+        "link": "https://www.engadget.com/the-10-best-white-elephant-gifts-worth-fighting-over-for-2025-150516281.html?src=rss",
+        "published": "Wed, 10 Dec 2025 20:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>There are a lot of competing ideas as to what a white elephant gift exchange really is. The origins of the term \u201cwhite elephant\u201d point to one definition: According to legend, the King of Siam would give a white elephant to courtiers who had upset them. It was a far more devious punishment than simply having them executed. The recipient had no choice but to simply thank the king for such an opulent gift, knowing that they likely could not afford the upkeep for such an animal. It would inevitab"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/the-world-premieres-and-other-hotness-from-the-game-awards-2025-day-of-the-devs-stream-200000447.html?src=rss",
+        "title": "The world premieres and other hotness from The Game Awards 2025 Day of the Devs stream",
+        "link": "https://www.engadget.com/gaming/the-world-premieres-and-other-hotness-from-the-game-awards-2025-day-of-the-devs-stream-200000447.html?src=rss",
+        "published": "Wed, 10 Dec 2025 20:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You gotta love that post-Day of the Devs showcase feeling. The organization, founded by Double Fine Productions and iam8bit, consistently highlights top-tier games from independent developers across the globe, providing space for creators to share their stories in both online and in-person events. This year\u2019s <a class=\"link\" href=\"https://www.engadget.com/gaming/watch-the-day-of-the-devs-game-awards-2025-edition-right-here-at-1pm-et-060000319.html\" target=\"_blank\">Day of the Devs: The Game Aw"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/ps-plus-game-catalog-additions-for-december-include-assassins-creed-mirage-193731745.html?src=rss",
+        "title": "PS Plus Game Catalog additions for December include Assassin's Creed Mirage",
+        "link": "https://www.engadget.com/gaming/playstation/ps-plus-game-catalog-additions-for-december-include-assassins-creed-mirage-193731745.html?src=rss",
+        "published": "Wed, 10 Dec 2025 19:37:31 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sony <a href=\"https://blog.playstation.com/2025/12/10/playstation-plus-game-catalog-for-december-assassins-creed-mirage-wo-long-fallen-dynasty-skate-story-and-more/\">just announced December's Game Catalog additions</a> for PS Plus subscribers and it's a pretty decent lineup. All of these titles will be ready to play on December 16, except <em>Skate Story</em> <a href=\"https://www.engadget.com/gaming/playstation/skate-story-grinds-its-way-to-playstation-plus-on-december-8-193034939.html\">which"
+    },
+    {
+        "id": "https://gizmodo.com/how-the-grinch-stole-modern-christmas-2000697520",
+        "title": "How the Grinch Stole Modern Christmas",
+        "link": "https://gizmodo.com/how-the-grinch-stole-modern-christmas-2000697520",
+        "published": "Wed, 10 Dec 2025 20:00:46 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Grinch Dr. Seuss\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Grinch-Dr.-Seuss.jpg\" width=\"1920\" /><br /><br />From his storybook legacy to his modern-day anti-holiday influence, the Grinch has become an enduring face of the holidays\u2014sincerely or otherwise."
+    },
+    {
+        "id": "https://gizmodo.com/xai-answers-the-question-what-if-product-placement-was-significantly-worse-2000697957",
+        "title": "xAI Answers the Question, \u2018What if Product Placement was Significantly Worse?\u2019",
+        "link": "https://gizmodo.com/xai-answers-the-question-what-if-product-placement-was-significantly-worse-2000697957",
+        "published": "Wed, 10 Dec 2025 19:45:57 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"The X Sign Installed At The Twitter Headquarters\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/GettyImages-1562223166.jpg\" width=\"1920\" /><br /><br />Sometimes innovation is two steps back."
+    },
+    {
+        "id": "https://gizmodo.com/youtube-tv-wants-to-unbundle-the-cable-package-that-streamers-were-meant-to-kill-in-the-first-place-2000697966",
+        "title": "YouTube TV Wants to Unbundle the Cable Package That Streamers Were Meant to Kill in the First Place",
+        "link": "https://gizmodo.com/youtube-tv-wants-to-unbundle-the-cable-package-that-streamers-were-meant-to-kill-in-the-first-place-2000697966",
+        "published": "Wed, 10 Dec 2025 19:30:20 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Photo: Jakub Porzycki/NurPhoto\" class=\"attachment-full size-full wp-post-image\" height=\"1079\" src=\"https://gizmodo.com/app/uploads/2024/02/5d31a2fc8370235a62f54c187695911e.jpg\" width=\"1920\" /><br /><br />The video platform\u2019s cable streaming service is introducing cheaper genre-specifying channel bundles next year."
+    },
+    {
+        "id": "https://gizmodo.com/sperm-donor-with-a-cancer-causing-gene-fathered-at-least-197-kids-2000697978",
+        "title": "Sperm Donor With a Cancer-Causing Gene Fathered at Least 197 Kids",
+        "link": "https://gizmodo.com/sperm-donor-with-a-cancer-causing-gene-fathered-at-least-197-kids-2000697978",
+        "published": "Wed, 10 Dec 2025 19:20:59 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Sperm\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/sperm.jpg\" width=\"1920\" /><br /><br />Because only part of the man's sperm carried the mutation, only the second round of genetic testing revealed the problem. By then, it was already too late."
+    },
+    {
+        "id": "https://mashable.com/article/foldable-iphones-2026-samsung-display-rumors-reports",
+        "title": "Foldable iPhone rumors: Everything weve heard so far",
+        "link": "https://mashable.com/article/foldable-iphones-2026-samsung-display-rumors-reports",
+        "published": "Wed, 10 Dec 2025 19:08:49 +0000",
+        "source": "Mashable",
+        "summary": "Rumors suggest we could soon see foldable iPhones in 2026, but they'll cost you. Here's what we know about the rumored iPhone Fold from Apple."
+    },
+    {
+        "id": "https://mashable.com/article/thunder-suns-nba-cup-2025-live-stream-for-free",
+        "title": "How to watch Thunder vs. Suns online for free",
+        "link": "https://mashable.com/article/thunder-suns-nba-cup-2025-live-stream-for-free",
+        "published": "Wed, 10 Dec 2025 19:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream Oklahoma City Thunder vs. Phoenix Suns in the NBA Cup for free from anywhere in the world."
+    },
+    {
+        "id": "https://github.com/malucard/sm64-psx",
+        "title": "Super Mario 64 for the PS1",
+        "link": "https://github.com/malucard/sm64-psx",
+        "published": "Wed, 10 Dec 2025 18:58:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46221925\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/hashicorp/terraform-cdk",
+        "title": "The future of Terraform CDK",
+        "link": "https://github.com/hashicorp/terraform-cdk",
+        "published": "Wed, 10 Dec 2025 19:14:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46222165\">Comments</a>"
     }
 ]
