📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7006,5 +7006,85 @@
         "published": "Wed, 10 Dec 2025 19:14:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46222165\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/ceo-of-south-korean-retail-giant-coupang-resigns-after-massive-data-breach/",
+        "title": "CEO of South Korean retail giant Coupang resigns after massive data breach",
+        "link": "https://techcrunch.com/2025/12/10/ceo-of-south-korean-retail-giant-coupang-resigns-after-massive-data-breach/",
+        "published": "Wed, 10 Dec 2025 21:06:55 +0000",
+        "source": "TechCrunch",
+        "summary": "The massive data breach at the South Korean retail giant Coupang affects more than half of the country's population."
+    },
+    {
+        "id": "https://www.theverge.com/tech/647901/best-smart-rings",
+        "title": "The best smart rings for tracking sleep and health",
+        "link": "https://www.theverge.com/tech/647901/best-smart-rings",
+        "published": "2025-12-10T15:29:50-05:00",
+        "source": "The Verge",
+        "summary": "So, you\u2019re thinking of buying a smart ring. Well, some good news. Picking the best of the lot is incredibly easy right now. The \u201cbad\u201d news is that, as far as trustworthiness and reliability, your choices are somewhat limited, as this is still a niche and emerging gadget category. Smart rings are in the middle [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841887/data-center-space-solar-power-aetherflux-lunch",
+        "title": "The scramble to launch data centers into space is heating up",
+        "link": "https://www.theverge.com/news/841887/data-center-space-solar-power-aetherflux-lunch",
+        "published": "2025-12-10T15:13:03-05:00",
+        "source": "The Verge",
+        "summary": "A startup developing technologies to harness solar power in space is throwing its hat in with big tech companies attempting to build out data centers that orbit Earth. The US-based company, Aetherflux, announced on Tuesday that it plans to launch its first data center satellite in early 2027 - the first piece of a larger [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-best-robot-vacuum-deal-2025/",
+        "title": "Eufy\u2019s Best Robot Vacuum Is $405 Off (2025)",
+        "link": "https://www.wired.com/story/the-best-robot-vacuum-deal-2025/",
+        "published": "Wed, 10 Dec 2025 20:54:00 +0000",
+        "source": "WIRED",
+        "summary": "Eufy\u2019s last-season robot vacuum-mop has a crazy price cut. Grab it before it\u2019s gone."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/music/spotifys-new-playlist-feature-gives-users-more-control-over-their-recommendation-algorithm-203237903.html?src=rss",
+        "title": "Spotify's new playlist feature gives users more control over their recommendation algorithm",
+        "link": "https://www.engadget.com/entertainment/music/spotifys-new-playlist-feature-gives-users-more-control-over-their-recommendation-algorithm-203237903.html?src=rss",
+        "published": "Wed, 10 Dec 2025 20:32:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Spotify is attempting to give users more control over the music the streaming service recommends with a new playlist feature called <a class=\"link\" href=\"https://newsroom.spotify.com/2025-12-10/spotify-prompted-playlists-algorithm-gustav-soderstrom/\" target=\"_blank\">&quot;Prompted Playlist.&quot;</a> The beta feature is rolling out in New Zealand starting on December 11, and will let users write a custom prompt that Spotify can use \u2014 alongside their listening history \u2014 to create a playlist of"
+    },
+    {
+        "id": "https://gizmodo.com/this-weeks-mighty-nein-inherits-the-beef-between-its-2-best-characters-2000694310",
+        "title": "This Week\u2019s \u2018Mighty Nein\u2019 Inherits the Beef Between Its 2 Best Characters",
+        "link": "https://gizmodo.com/this-weeks-mighty-nein-inherits-the-beef-between-its-2-best-characters-2000694310",
+        "published": "Wed, 10 Dec 2025 21:00:23 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Mighty Nein Beau Caleb\" class=\"attachment-full size-full wp-post-image\" height=\"1387\" src=\"https://gizmodo.com/app/uploads/2025/12/mighty-nein-beau-caleb.jpg\" width=\"1920\" /><br /><br />The Mighty Nein will become a great, well-oiled party someday, but first, they've got some kinks to work out."
+    },
+    {
+        "id": "https://gizmodo.com/marco-rubio-orders-state-dept-to-stop-using-calibri-font-in-anti-dei-push-2000698012",
+        "title": "Marco Rubio Orders State Dept to Stop Using Calibri Font in Anti-DEI Push",
+        "link": "https://gizmodo.com/marco-rubio-orders-state-dept-to-stop-using-calibri-font-in-anti-dei-push-2000698012",
+        "published": "Wed, 10 Dec 2025 20:20:12 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"U.S. Secretary of State Marco Rubio looks on during a meeting with U.S. President Donald Trump and President of Argentina Javier Milei in the Cabinet Room at the White House on October 14, 2025 in Washington, DC.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/marco-rubio-oct.-14-2025.jpg\" width=\"1920\" /><br /><br />\u201cSwitching to Calibri achieved nothing except the degradation of the department\u2019s official correspondence,\" Rubi"
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-le-wand-classique-collection-free-gift-deal",
+        "title": "Le Wand just dropped four new vibes, and each one comes with a freebie",
+        "link": "https://mashable.com/article/dec-10-le-wand-classique-collection-free-gift-deal",
+        "published": "Wed, 10 Dec 2025 19:48:38 +0000",
+        "source": "Mashable",
+        "summary": "Le Wand's new Classique line (which includes four vibrators) is luxe, affordable, and it comes with a freebie for your goodie drawer."
+    },
+    {
+        "id": "https://mashable.com/article/running-up-that-hill-stranger-things-scene",
+        "title": "Running Up That Hill returns for Season 5 of Stranger Things",
+        "link": "https://mashable.com/article/running-up-that-hill-stranger-things-scene",
+        "published": "Wed, 10 Dec 2025 19:30:00 +0000",
+        "source": "Mashable",
+        "summary": "Kate Bush's 'Running Up That Hill' returns and gives special meaning to Max's battle."
+    },
+    {
+        "id": "https://www.apple.com/support/systemstatus/",
+        "title": "Apple Services Experiencing Outage",
+        "link": "https://www.apple.com/support/systemstatus/",
+        "published": "Wed, 10 Dec 2025 20:47:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46223577\">Comments</a>"
     }
 ]
