📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7270,5 +7270,117 @@
         "published": "Wed, 10 Dec 2025 20:29:12 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46223311\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/state-attorneys-general-warn-microsoft-openai-google-and-other-ai-giants-to-fix-delusional-outputs/",
+        "title": "State attorneys general warn Microsoft, OpenAI, Google, and other AI giants to fix \u2018delusional\u2019 outputs",
+        "link": "https://techcrunch.com/2025/12/10/state-attorneys-general-warn-microsoft-openai-google-and-other-ai-giants-to-fix-delusional-outputs/",
+        "published": "Thu, 11 Dec 2025 00:13:43 +0000",
+        "source": "TechCrunch",
+        "summary": "The letter demanded companies institute new safeguards to keep users safe from harmful psychological impacts."
+    },
+    {
+        "id": "https://www.theverge.com/policy/842087/trump-does-not-understand-6g-5g",
+        "title": "Donald Trump reminds the entire world he has no idea what 6G means",
+        "link": "https://www.theverge.com/policy/842087/trump-does-not-understand-6g-5g",
+        "published": "2025-12-10T18:37:26-05:00",
+        "source": "The Verge",
+        "summary": "When business leaders spout buzzwords like \"AI,\" \"8K\" and \"5G,\" sometimes in the same sentence, we often get a sneaking suspicion they don't know what they mean! With President Donald Trump, there's no need to wonder: he clearly has no idea. \"What does [6G] do? Give you a little bit deeper view into somebody's skin?\" [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842129/trump-admin-us-cbp-social-media-history-travelers",
+        "title": "Trump could introduce \u2018mandatory\u2019 social media reviews for travelers",
+        "link": "https://www.theverge.com/news/842129/trump-admin-us-cbp-social-media-history-travelers",
+        "published": "2025-12-10T18:21:05-05:00",
+        "source": "The Verge",
+        "summary": "The Trump administration could soon require tourists from dozens of nations to hand over their social media handles before entering the country. Under a proposal from US Customs and Border Protection, the agency would make social media history from the past five years a \"mandatory\" part of the screening process, as reported earlier by The [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/after-years-of-resisting-it-spacex-now-plans-to-go-public-why/",
+        "title": "After years of resisting it, SpaceX now plans to go public. Why?",
+        "link": "https://arstechnica.com/space/2025/12/after-years-of-resisting-it-spacex-now-plans-to-go-public-why/",
+        "published": "Wed, 10 Dec 2025 23:16:52 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"Much of the AI race comes down to amassing and deploying assets.\""
+    },
+    {
+        "id": "https://www.engadget.com/gaming/mewgenics-the-next-game-from-the-binding-of-isaacs-developer-will-arrive-next-february-on-pc-235740063.html?src=rss",
+        "title": "Mewgenics, the next game from The Binding of Isaac's developer, will arrive next February on PC",
+        "link": "https://www.engadget.com/gaming/mewgenics-the-next-game-from-the-binding-of-isaacs-developer-will-arrive-next-february-on-pc-235740063.html?src=rss",
+        "published": "Wed, 10 Dec 2025 23:57:40 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Indie game developer Edmund McMillen hosted a <a class=\"link\" href=\"https://www.reddit.com/r/gaming/comments/1pj8wqu/edmund_mcmillen_here_creator_of_the_binding_of/\" target=\"_blank\">Reddit AMA</a> today offering some more details about his upcoming game <em>Mewgenics</em>. For starters, the Steam release date for this turn-based cat-breeding RPG has been slightly delayed to February 10. The game was first announced all the way back in 2012 and had most recently been <a class=\"link\" href=\"http"
+    },
+    {
+        "id": "https://gizmodo.com/64-of-teens-say-they-use-ai-chatbots-as-mental-health-concerns-mount-2000697981",
+        "title": "64% of Teens Say They Use AI Chatbots as Mental Health Concerns Mount",
+        "link": "https://gizmodo.com/64-of-teens-say-they-use-ai-chatbots-as-mental-health-concerns-mount-2000697981",
+        "published": "Thu, 11 Dec 2025 00:00:37 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Group of teens walking while looking at their phones\" class=\"attachment-full size-full wp-post-image\" height=\"1187\" src=\"https://gizmodo.com/app/uploads/2025/12/shutterstock_1101247694-e1765398401668.jpg\" width=\"1779\" /><br /><br />The teens just love ChatGPT. Does OpenAI love them back?"
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-crest-whitestrips-deal",
+        "title": "Stock up on Crest Whitestrips now that theyre back down to the Black Friday price",
+        "link": "https://mashable.com/article/dec-10-crest-whitestrips-deal",
+        "published": "Wed, 10 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The 22-treatment Crest Whitestrips Professional Effects is on sale at Amazon for $29.99, down from the list price of $45.99. That's a 35% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-jackery-homepower-3600-plus-deal",
+        "title": "Slash over $1,000 off the Jackery HomePower 3600 portable power station at Amazon",
+        "link": "https://mashable.com/article/dec-10-jackery-homepower-3600-plus-deal",
+        "published": "Wed, 10 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The Jackery HomePower 3600 portable power station is on sale at Amazon for $1,699. That's over $1,000 in savings."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-internxt-cloud-storage-lifetime-subscription-100tb",
+        "title": "This 100TB encrypted cloud storage lifetime subscription is now 90% off",
+        "link": "https://mashable.com/article/dec-10-internxt-cloud-storage-lifetime-subscription-100tb",
+        "published": "Wed, 10 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "For a limited time, Internxt is selling its 100TB lifetime encrypted cloud storage plan at close to 90% off."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-edu-unlimited-by-stackskills",
+        "title": "One $20 payment gives you 1,000+ learning courses forever",
+        "link": "https://mashable.com/article/dec-10-edu-unlimited-by-stackskills",
+        "published": "Wed, 10 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Get lifetime access to 1,000+ StackSkills courses for just $19.97, covering everything from IT and design to business, coding, finance, and more."
+    },
+    {
+        "id": "https://mashable.com/article/mcdonalds-netherlands-ai-holiday-commercial-backlash",
+        "title": "McDonalds Netherlands released an AI holiday commercial, and people are not lovin it",
+        "link": "https://mashable.com/article/mcdonalds-netherlands-ai-holiday-commercial-backlash",
+        "published": "Wed, 10 Dec 2025 22:41:02 +0000",
+        "source": "Mashable",
+        "summary": "McDonald's Netherlands released a holiday ad made with generative AI, and the backlash online was swift. It turns out, people are not lovin' it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/amazon-kindle-scribe-colorsoft-2025-review/",
+        "title": "The Kindle I didn't expect to use for work is now my top productivity device - here's why",
+        "link": "https://www.zdnet.com/article/amazon-kindle-scribe-colorsoft-2025-review/",
+        "published": "Thu, 11 Dec 2025 00:23:00 GMT",
+        "source": "Latest news",
+        "summary": "Amazon's latest Kindle Scribe Colorsoft features some design improvements while retaining its core capabilities."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tv-usb-port-hidden-features/",
+        "title": "My Wi-Fi went out, but a forgotten TV feature kept me entertained for hours",
+        "link": "https://www.zdnet.com/article/tv-usb-port-hidden-features/",
+        "published": "Thu, 11 Dec 2025 00:15:00 GMT",
+        "source": "Latest news",
+        "summary": "No internet on your TV? A USB drive lets you watch movies, play music, view photos, and more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/hp-series-5-pro-monitor-review/",
+        "title": "This HP travel display convinced me to give portable monitors another shot",
+        "link": "https://www.zdnet.com/article/hp-series-5-pro-monitor-review/",
+        "published": "Thu, 11 Dec 2025 00:11:00 GMT",
+        "source": "Latest news",
+        "summary": "HP's Series 5 Pro 14-inch WQXGA portable monitor lets you enjoy a dual-monitor setup on the road with some extra usability perks."
     }
 ]
