📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7446,5 +7446,53 @@
         "published": "Thu, 11 Dec 2025 01:18:55 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46226483\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-11",
+        "title": "NYT Pips hints, answers for December 11, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-11",
+        "published": "Thu, 11 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-11-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 11, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-11-2025",
+        "published": "Thu, 11 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-11-2025",
+        "title": "NYT Strands hints, answers for December 11, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-11-2025",
+        "published": "Thu, 11 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-11-2025",
+        "title": "Wordle today: Answer, hints for December 11, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-11-2025",
+        "published": "Thu, 11 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1635 on December 11 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-11-2025",
+        "title": "Hurdle hints and answers for December 11, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-11-2025",
+        "published": "Thu, 11 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://law.gmnz.xyz/vibe-coding-is-mad-depressing/",
+        "title": "Vibe coding is mad depressing",
+        "link": "https://law.gmnz.xyz/vibe-coding-is-mad-depressing/",
+        "published": "Thu, 11 Dec 2025 03:50:04 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46227422\">Comments</a>"
     }
 ]
